@@ -60,6 +60,7 @@ import com.lukaspradel.steamapi.webapi.request.SteamWebApiRequest;
 import com.lukaspradel.steamapi.webapi.request.SteamWebApiRequestHandler;
 import com.lukaspradel.steamapi.webapi.request.builders.SteamWebApiRequestFactory;
 
+@SuppressWarnings("unused")
 public class SteamWebApiClientTest extends BaseTest {
 
 	private static final String KEY_MOCK = "12345";
@@ -748,7 +749,7 @@ public class SteamWebApiClientTest extends BaseTest {
 
 	@Test
 	public void testProcessGetMatchHistoryBySequenceNum() throws SteamApiException, IOException {
-		GetMatchHistoryBySequenceNumRequest request = SteamWebApiRequestFactory.createGetMatchHistoryBySequenceNumRequest(new Long(100), 20);
+		GetMatchHistoryBySequenceNumRequest request = SteamWebApiRequestFactory.createGetMatchHistoryBySequenceNumRequest(Long.valueOf(100), 20);
 
 		String mockAnswer = readResourceAsString("dota2/GetMatchHistoryBySequenceNum.json");
 
