@@ -3,7 +3,6 @@ package com.lukaspradel.steamapi.webapi.request.builders;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertNotNull;
 import static org.testng.Assert.assertNull;
-import static org.testng.Assert.assertTrue;
 
 import java.io.IOException;
 import java.util.*;
@@ -670,7 +669,7 @@ public class SteamWebApiRequestFactoryTest {
 
     @Test
 	public void testGetMatchHistoryBySequenceNumRequest() {
-		GetMatchHistoryBySequenceNumRequest request = SteamWebApiRequestFactory.createGetMatchHistoryBySequenceNumRequest(new Long(100),20);
+		GetMatchHistoryBySequenceNumRequest request = SteamWebApiRequestFactory.createGetMatchHistoryBySequenceNumRequest(Long.valueOf(100),20);
 
 		assertNotNull(request);
 
